--- a/style.css
+++ b/style.css
@@ -1,4 +1,69 @@
 #logo-img{
     size: 90px;
     height: 50px;
+    border-radius: 20px;
+}
+.logo{
+    color: whitesmoke; 
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 30px;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+}
+nav{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh;
+    background-color: darkblue;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.navbar{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 20%;
+}
+.navbar li{
+    list-style: none;
+}
+.navbar a{
+    color: whitesmoke;
+    text-decoration: none;
+}
+.burger div{
+    width: 30px;
+    height: 2px;
+    background-color: whitesmoke;
+    margin: 5px;
+}
+.burger{
+    display: none;
+    cursor: pointer;
+}
+
+@media screen and (max-width:768px){
+    body{
+        /* display: none; */
+        overflow-x: hidden;
+    }
+    .navbar{
+        position: absolute;
+        right: 0px;
+        height: 90vh;
+        top: 8vh;
+        background-color: darkblue;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 15%;
+        transform: translateX(100%);
+        transition: 0.5s ease-in;
+    }
+    .navbar li{
+        opacity: 0;
+    }
+    .burger{
+        display: block;
+    }
 }
