--- a/jsp/style.css
+++ b/jsp/style.css
@@ -3,57 +3,61 @@
   padding: 0px;
   box-sizing: border-box;
 }
+
 body {
-  background-image: linear-gradient(90deg, aqua, forestgreen);
-  color: whitesmoke;
-  font-family: serif;
+  background-image: linear-gradient(90deg, grey, rgb(54, 56, 165));
+  color: white;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   min-height: 100vh;
 }
+
 header {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
+
+/* grab the header and the form and put everything at the center */
 header,
 form {
-  min-height: 30vh;
+  min-height: 20vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
+/* get the form input and the form button */
 form input,
 form button {
-border: none;
-padding: 0.5rem;
-/* outline: none; */
-/* min-height: 5vh; */
-font-size: 2rem;
-background: #ffffff;
+  padding: 0.5rem;
+  font-size: 2rem;
+  border: none;
+  background: white;
 }
-/* form input{
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-  font-family: serif;
-  color: blueviolet;
-} */
-button{
+
+form button {
+  color: rgb(71, 71, 212);
+  background: white;
   cursor: pointer;
-  transition: ease-in 0.5s;
-  background-color:burlywood;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  transition: all 0.3s ease;
 }
+
 form button:hover {
-  background: grey;
+  background: rgb(71, 71, 212);
+  color: white;
 }
-.toDoContainer {
+
+/* after writing the javascript */
+.todo-container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.toDoList {
-  min-width: 40%;
+
+.todo-list {
+  min-width: 30%;
   list-style: none;
 }
-.toDo {
+
+.todo {
   margin: 0.5rem;
   background: white;
   color: black;
@@ -61,31 +65,98 @@ form button:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  /* transition: all 0.5s ease; */
 }
-.toDo li {
+
+.todo li {
   flex: 1;
 }
-.trash-Btn,
-.completeBtn {
-  /* background-color: #dacccc; */
+
+.trash-btn,
+.complete-btn {
   background: red;
   color: white;
   padding: 1rem;
   border: none;
   cursor: pointer;
   font-size: 1rem;
-  /* display: flex; */
 }
-.completeButton{
-    background: #57b657;
+
+.complete-btn {
+  background: green;
 }
-.toDoItem{
-    padding: 0rem 0.5rem;
+
+/* back to the javascript */
+
+/* i want to add some padding to the item list */
+.todo-item {
+  padding: 0rem 0.5rem;
 }
-.fa-trash,.fa-check{
-    pointer-events: none;
+
+/* facing the problem of clicking on the icon */
+.fa-trash,
+.fa-check {
+  pointer-events: none;
 }
-.completed{
+
+/* for the animation 
+after creating the delete and checkmark button in javascript
+*/
+
+.completed {
   text-decoration: line-through;
   opacity: 0.5;
+}
+
+/* clicking on the checkmark button just makes it go on and off like a traffic light
+lets use some animatioin to stop that */
+
+.todo {
+  transition: all 1s ease;
+}
+
+/* to animate the delete icon */
+.fall {
+  transform: translateY(8rem) rotateZ(20deg);
+  opacity: 0;
+}
+
+/* lets remove all the styles from the select tag */
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+  border: none;
+  color: rgb(17, 17, 212);
+  width: 10rem;
+  cursor: pointer;
+  padding: 1rem;
+}
+
+/* now we take the div we created around the select */
+.select {
+  margin: 1rem;
+  position: relative;
+  overflow: hidden;
+}
+
+/* now what we have to do is to add the arrow back
+get the select div, add a sudo element of after
+*/
+.select::after {
+  content: "\25BC";
+  position: absolute;
+  background: #231e6e;
+  top: 0;
+  right: 0;
+  padding: 1rem;
+  pointer-events: none;
+  transition: all 1s ease;
+}
+
+/* add some transition to it upon hover */
+.select:hover::after {
+  background: white;
+  color: blue;
 }
