--- a/jsp2/jsp2.css
+++ b/jsp2/jsp2.css
@@ -25,8 +25,8 @@ h1 button {
 }
 .btn {
   cursor: pointer;
-  background-color: #75f5f5;
-  border: 1px solid whitesmoke;
+  background-color: #fff;
+  border: 1px solid #aaa;
   border-radius: 3px;
   font-size: 14px;
   margin-top: 20px;
@@ -66,7 +66,7 @@ h1 button {
 .card.active {
   cursor: pointer;
   opacity: 1;
-  z-index: 0;
+  z-index: 10;
   transform: translateX(0) rotateY(0deg);
 }
 .card.left {
@@ -79,6 +79,7 @@ h1 button {
   width: 100%;
   position: relative;
   transform-style: preserve-3d;
+  transition: transform 0.5s ease;
 }
 .card.show-answer .inner-card {
   transform: rotateX(180deg);
@@ -105,14 +106,14 @@ h1 button {
 }
 .inner-card-front::after,
 .inner-card-back::after {
-  content: \f021 Flip;
+  content: "\1052  Flip";
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   position: absolute;
   top: 10px;
   right: 10px;
   font-weight: bold;
   font-size: 16px;
-  color: white;
+  color: #ddd;
 }
 .navigation {
   display: flex;
@@ -121,7 +122,6 @@ h1 button {
 .navigation .nav-button {
   border: none;
   background-color: transparent;
-  margin: 20px 0;
   cursor: pointer;
   font-size: 16px;
 }
@@ -131,7 +131,7 @@ h1 button {
 .add-container {
   opacity: 0;
   z-index: -1;
-  background-color: #fff;
+  background-color: #f0f0f0;
   border-top: 2px solid #eee;
   display: flex;
   flex-direction: column;
@@ -142,13 +142,13 @@ h1 button {
   top: 0;
   bottom: 0;
   width: 100%;
-  transition: 0.3s ease;
+  transition: 0.5s ease;
 }
 .add-container.show {
   opacity: 1;
   z-index: 2;
 }
-.add-container h1 {
+.add-container h3 {
   margin: 10px 0;
 }
 .form-group label {
